# Distributed-LLM-Training-and-Inference-System

./: .gitignore  README.md  comprehensive_test.py  pyproject.toml  test_inference.py
configs/models/: llama-7b.json
configs/presets/: a100x8.toml  llama-7b-a100x8.toml
docs/: USER_GUIDE.md
llmctl/: __init__.py
llmctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmctl/cli/: __init__.py  main.py
llmctl/cli/commands/: admin.py  bench.py  eval.py  export.py  health.py  hw.py  init.py  plan.py  replay.py  serve.py  trace.py  train.py  tune.py
llmctl/comms/: __init__.py
llmctl/config/: __init__.py
llmctl/exec/: __init__.py
llmctl/io/: __init__.py
llmctl/metrics/: __init__.py  health.py  observability.py
llmctl/partition/: __init__.py
llmctl/plugins/: __init__.py  autotuning.py
llmctl/runtime/: __init__.py  engine.py  launcher.py  train_script.py
llmctl/serve/: __init__.py  server.py
tests/integration/: test_cli.py
tuning_results/: full_tuning_results.json  tuning_cache.json
